--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.2.2",
+    "@babel/runtime": "^7.11.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
-    "antd": "^4.0.3",
+    "antd": "^4.6.4",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "mdbreact": "^4.27.0",
@@ -41,6 +43,8 @@
     ]
   },
   "devDependencies": {
+    "@babel/cli": "^7.11.6",
+    "@babel/core": "^7.11.6",
     "css-loader": "^4.2.2",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
